# d-ai-email-processing

./: .gitignore  README.md  azure.yaml  d-ai-email-processing.sln
.github/instructions/: general.instructions.md  python.instructions.md
.github/prompts/: OrganizeCommonErrors.prompt.md  OrganizeImplementationLog.prompt.md  RobustVibeCoding.prompt.md
.github/workflows/: client-web-build.yaml  company-apis-build.yaml  docproc-classifier-build.yaml  docproc-data-extractor-build.yaml  docproc-parser-foundry-build.yaml  docproc-search-indexer-build.yaml  main_logic-email-dev-vwyh.yml  submission-analyzer-build.yaml  submission-intake-build.yaml  submission-trigger-build.yaml
demo-submissions/sub1/: body.txt
demo-submissions/sub2/: body.txt
docs/: CommonErrors.md  Design.md  ImplementationLog.md  ImplementationPlan.md
infra/: .gitignore  README.md  ai_foundry.tf  ai_search.tf  bing.tf  container_app.client-web.tf  container_app.company-apis.tf  container_app.docproc-classifier.tf  container_app.docproc-data-extractor.tf  container_app.docproc-parser-foundry.tf  container_app.docproc-search-indexer.tf  container_app.env.tf  container_app.submission-analyzer.tf  container_app.submission-intake.tf  container_app.submission-trigger.tf  cosmosdb.account.tf  cosmosdb.durable-functions.tf  cosmosdb.event-sourcing.tf  cosmosdb.tf  document_intelligence.tf  logic_app.tf  main.tf  main.tfvars.json  monitoring.tf  openai.tf  outputs.tf  providers.tf  rbac.ai.tf  rbac.bing.tf  rbac.identities.tf  rbac.messaging.tf  rbac.search.tf  rbac.storage.tf  rbac.tf  resource_group.tf  service_bus.tf  storage.tf  terraform.tfvars.example  variables.tf
logic-apps/: .gitignore  connections.json  local.settings.json  logic-email-dev-vwyh.csproj
logic-apps/submission-approval/: workflow.json
logic-apps/submission-email-receiver/: workflow.json
logic-apps/test/: workflow.json
logic-apps/workflow-designtime/: local.settings.json
policies-docs/: 01-credit-limit-policy.md  02-investment-account-coverage-policy.md  03-fraud-prevention-detection-policy.md  04-anti-money-laundering-policy.md  05-risk-assessment-management-policy.md  06-data-protection-privacy-policy.md  07-business-continuity-disaster-recovery-policy.md  08-cybersecurity-information-security-policy.md  09-loan-underwriting-approval-policy.md  10-capital-adequacy-liquidity-management-policy.md  11-vendor-third-party-risk-management-policy.md  12-market-risk-management-policy.md  13-operational-risk-management-policy.md  14-model-risk-management-policy.md  15-customer-complaint-handling-policy.md  16-internal-audit-policy.md  17-regulatory-compliance-policy.md  18-interest-rate-risk-management-policy.md
src/: documents-index.json
src/client-web/: .env.example  .sesskey  Dockerfile  README.md  main.py  models.py  pyproject.toml
src/company-apis/: .env.example  Dockerfile  README.md  company-apis-openapi.json  main.py  models.py  openapi.yaml  pyproject.toml  test-api.http
src/demo-utils/: .env.example  README.md  agent_company_policies.py  agent_create.py  agent_submission_analyzer.py  cleanup_demo_data.py  company-apis-openapi.json  pyproject.toml  submit_demo_data.py  submit_demo_processed.py
src/docproc-aggregator/: README.md
src/docproc-classifier/: .env.example  README.md  change_feed_processor.py  config.py  continuation_token_storage.py  document_classifier.py  main.py  models.py  pyproject.toml
src/docproc-data-extractor/: .env.example  README.md  change_feed_processor.py  config.py  data_extractor.py  main.py  models.py  pyproject.toml  system_prompt.jinja2
src/docproc-parser-foundry/: .env.example  README.md  change_feed_processor.py  config.py  main.py  models.py  pyproject.toml
src/docproc-parser-markitdown/: README.md
src/docproc-search-indexer/: .env.example  .env.sample  README.md  change_feed_processor.py  config.py  document_chunking_service.py  main.py  models.py  pyproject.toml  search_index_manager.py  search_indexer.py
src/logic-app/: README.md  connections.json  host.json  local.settings.json  package-lock.json  package.json
src/logic-app/email-processing-workflow/: workflow.json
src/policies-search/: .env.example  README.md  main.py  pyproject.toml
src/submission-analyzer/: .env.example  README.md  agent.py  agent_company_policies.py  change_feed_processor.py  company-apis-openapi.json  company_policies_prompt.jinja2  config.py  main.py  models.py  pyproject.toml  service_bus_client.py  system_prompt.jinja2
src/submission-intake/: .env.example  .env.template  Dockerfile  README.md  config.py  main.py  models.py  pyproject.toml  storage.py
src/submission-trigger/: .env.sample  README.md  change_feed_processor.py  config.py  main.py  models.py  pyproject.toml
submissions-durable-functions/: config.py  function_app.py  models.py  requirements.txt
submissions-durable-functions/actions/: __init__.py  document_classifier.py  document_data_extractor.py  document_parser.py  submission_storage.py
submissions-durable-functions/actions/prompts/: classifier_system_prompt.jinja2
