[project]
name = "company-apis"
version = "0.1.0"
description = "Company APIs service providing mock business data for AI agents"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.116.0",
    "uvicorn>=0.32.0",
    "python-dotenv>=1.1.1",
    "pydantic>=2.11.0",
    "pydantic[email]>=2.11.0",
    "tzdata>=2024.1",
]
