[project]
name = "docproc-classifier"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "aiohttp>=3.12.13",
    "azure-cosmos>=4.9.0",
    "azure-identity>=1.23.0",
    "openai>=1.93.3",
    "pydantic>=2.11.7",
    "python-dotenv>=1.1.1",
]
