[project]
name = "submission-analyzer"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "azure-ai-projects>=1.0.0b12",
    "azure-identity>=1.23.0",
    "azure-servicebus>=7.12.0",
    "azure-cosmos>=4.3.1",
    "azure-data-tables>=12.4.0",
    "python-dotenv>=1.1.1",
    "pydantic>=2.0.0",
    "jsonref>=1.1.0",
    "jinja2>=3.1.0",
    "tenacity>=8.2.0",
    "aiohttp>=3.12.14",
]
