[project]
name = "submission-trigger"
version = "0.1.0"
description = "Service that tracks document processing status and triggers submission preparation completed events"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "pydantic>=2.0.0",
    "azure-cosmos>=4.0.0",
    "azure-identity>=1.15.0",
    "azure-data-tables>=12.0.0",
    "python-dotenv>=1.0.0",
    "aiohttp>=3.12.14",
]
